# LearnOpenGL

./: CMakeLists.txt
include/: Mesh.h  Model.h  Shader.h
shaders/: materials.fs  materials.vs  shader.fs  shader.vs  texture.fs
src/: Lighting.cpp  Mesh.cpp  Model.cpp  Modeling.cpp  Shader.cpp  Triangle.cpp
